fix line spacing

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -392,6 +392,7 @@ body {
         }
 
         .body {
+          line-height: 1.5em;
           .qa {
             margin-bottom: 3rem;
             $qa-size: 3rem;
